@@ -6,5 +6,9 @@ Application is an installation wizard for the JDK (Java Development Kit). It is 
 + INSTALLATION => jdk installation is failing
 - PATH => setting the environmental path is failing
 ```
+- When running `jar` application `javafx-sdk-20.0.1` should be also installed in the local environment, after that from the terminal following command is required to start the application:
+```
+java --module-path "C:/Program Files/Java/javafx-sdk-20.0.1/lib" --add-modules javafx.controls,javafx.fxml -jar InstallerWizard-1.0-SNAPSHOT.jar
+```
 
 ![image](https://github.com/af4092/Installation-Wizard-App/assets/24220136/52ff325d-426d-4f49-85a9-32f7dcedcad9)
